QPID-6232: [C++ broker] Linearstore segfaults when ulimit prevents creating new file in EFP

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1640357 13f79535-47bb-0310-9956-ffa450edef68